tests/ui-pre_1.39/flatten_and_doc.stderr
error: methods and doc comments are not allowed for flattened entry
  --> $DIR/flatten_and_doc.rs:23:17
   |
23 |     #[structopt(flatten)]
   |                 ^^^^^^^
